# multi-agent-workshop

./: .gitignore  README.md  README_skillable.md  azure.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: Contoso_Tech_Product_Data.csv
excercises/: prompts.md
exercises/: 00_call_models.py  01_single_agent.py  02_two_agents.py  03_two_agents_guessing_game.py  04_generate_and_run_code_in_conversations.py  05_custom_agents_run_code.py  06_human_in_the_loop.py  07_functions_invoked_by_agents.py  08_generate_run_code_in_remote_container_on_aca_langchain.py  09_group_chat_coding_problem_sk.py  10_agent_to_mcp.py  11_mcp_gh_client.py  prompts.md  settings.py
infra/: README.md  main.bicep  main.parameters.json
infra/azdhooks/: preprovision.ps1
infra/modules/: containerapps.bicep  openai.bicep
src/: .rename_to_env  00_call_models.py  01_single_agent.py  02_two_agents.py  03_two_agents_game_with_termination.py  04_generate_and_run_code_in_conversations.py  05_custom_agents_run_code.py  06_human_in_the_loop.py  07_functions_invoked_by_agents.py  08_generate_run_code_in_remote_container_on_aca_langchain.py  09_group_chat_coding_problem_sk.py  10_agent_to_mcp.py  11_mcp_gh_client.py  beta_08_generate_and_run_code_in_remote_container_on_aca.py  settings.py  test_semantic_local.py
src/servers_mcp/: menu_agent_server.py  restaurant_agent_booking_server.py
